# G-Clay

./: README.md  install-src.sh
analyze/: ana-encode-read.cpp  ana-repair.cpp  util.h
deploy/: env.sh  first-shell.sh  first.sh
deploy/cephfiles/: change.sh  revert.sh
experiment/: encode-read-cloud.sh  repair-cloud-all.sh  repair-cloud.sh
gray/: Perm.h  brgc.cpp  main.cpp
src/common/: options.cc
src/erasure-code/: CMakeLists.txt  ErasureCodeInterface.h
src/erasure-code/jerasure/: ErasureCodeJerasure.cc  ErasureCodeJerasure.h
src/erasure-code/myclay/: CMakeLists.txt  ErasureCodeMyClay.cc  ErasureCodeMyClay.h  ErasureCodePluginMyClay.cc  ErasureCodePluginMyClay.h
src/osd/: ECBackend.cc  PrimaryLogPG.cc
